                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (8 Jul 2009)
- Constantine Sapuntzakis posted bug report #2813123
  (http://curl.haxx.se/bug/view.cgi?id=2813123) and an a patch that fixes the
  problem:

  Url A is accessed using auth. Url A redirects to Url B (on a different
  server0. Url B reuses a persistent connection. Url B has auth, even though
  it's on a different server.

  Note: if Url B does not reuse a persistent connection, auth is not sent.

  reason:

  data->state.first_host is not initialized becuase Curl_http_connect is not
  called when a connection is reused.

  Solution:

  move initialization of data->state.first_host to Curl_http. No code before
  Curl_http uses data->state.first_host anyway.

Guenter Knauf (4 Jul 2009)
- Markus Koetter provided a patch to avoid getnameinfo() usage which broke a
  couple of both IPv4 and IPv6 autobuilds.

Daniel Stenberg (29 Jun 2009)
- Markus Koetter made CURLOPT_FTPPORT (and curl's -P/--ftpport) support a port
  range if given colon-separated after the host name/address part. Like
  "192.168.0.1:2000-10000"

- Modified the separators used for CURLOPT_CERTINFO in multi-part outputs. I
  don't know how they got wrong in the first place, but using this output
  format makes it possible to quite easily separate the string into an array
  of multiple items.

Daniel Fandrich (16 June 2009)
- Added a few more compiler warning options for gcc.

Daniel Stenberg (16 Jun 2009)
- Reuven Wachtfogel made curl -o - properly produce a binary output on windows
  (no newline translations). Use -B/--use-ascii if you rather get the ascii
  approach.

Michal Marek (16 Jun 2009)
- When doing non-anonymous ftp via http proxies and the password is not